# AI-Powered-Resume-Based-Job-Recommendation-System

./: .gitignore  README.md  app.py  mcpserver.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
src/job.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
